--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,12 @@ dist
 dist-ssr
 *.local
 
+# Firebase/Firestore
+.firebase/
+.firebase/*
+.env
+
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
