--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -16,5 +16,10 @@ jobs:
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_TODO_YRJARV }}'
+          apiKey: '${{ secrets.APIKEY }}'
+          appid: '${{ secrets.APPID }}'
+          authDomain: '${{ secrets.AUTHDOMAIN }}'
+          messagingSenderId: '${{ secrets.MESSAGINGSENDERID }}'
+          projectId: '${{ secrets.PROJECTID }}'
+          storageBucket: '${{ secrets.STORAGEBUCKET }}'
           channelId: live
-          projectId: todo-yrjarv
